# amazon-braket-algorithm-library

./: .coveragerc  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  Template.ipynb  move_cell.py  move_refs.py  pyproject.toml  quantum_walk.py  setup.cfg  setup.py  tox.ini  tox_result.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  code-freeze.yml  publish-to-pypi.yml  python-package.yml  stale_issue.yml
.ipynb_checkpoints/: quantum_walk-checkpoint.ipynb
Grover-search-algorithm/: grovers.py
Grover-search-algorithm/.ipynb_checkpoints/: Grover_search_algorithm-checkpoint.ipynb
Grover_search_algorithm/: Grover_search_algorithm.ipynb  grovers.py  test_grovers.py
doc/: Makefile  conf.py  index.rst  requirements.txt
examples/: Bells_Inequality.ipynb  BernsteinVazirani_algorithm.ipynb  Deutsch_Jozsa_Algorithm.ipynb  Grover_Search.ipynb  QAOA.ipynb  QPCA.ipynb  Quantum_Circuit_Born_Machine.ipynb  Quantum_Fourier_Transform.ipynb  Quantum_Partition_Function.ipynb  Quantum_Phase_Estimation_Algorithm.ipynb  Shors_Algorithm.ipynb  Simons_Algorithm.ipynb  Template.ipynb  quantum_fourier_transform.ipynb  quantum_walk.ipynb
examples/.ipynb_checkpoints/: quantum_walk-checkpoint.ipynb
examples/afqmc/: Auxiliary_Field_Quantum_Monte_Carlo.ipynb  run_quantum_afqmc.py  walkthrough_afqmc.ipynb
notebooks/advanced_algorithms/: Auxiliary_Field_Quantum_Monte_Carlo.ipynb  HHL_Algorithm.ipynb  Quantum_Computing_Quantum_Monte_Carlo.ipynb  Quantum_Principal_Component_Analysis.ipynb
notebooks/auxilary/: Random_Circuit.ipynb
notebooks/auxiliary_functions/: Random_Circuit.ipynb
notebooks/textbook/: Bells_Inequality.ipynb  Bernstein_Vazirani_Algorithm.ipynb  CHSH_Inequality.ipynb  CSHS_Inequality.ipynb  Deutsch_Jozsa_Algorithm.ipynb  Grover_Search.ipynb  Grovers_Search.ipynb  Hadamard_Test.ipynb  MPS_Encoding.ipynb  QAOA.ipynb  Quantum_Approximate_Optimization_Algorithm.ipynb  Quantum_Circuit_Born_Machine.ipynb  Quantum_Counting.ipynb  Quantum_Counting_Algorithm.ipynb  Quantum_Fourier_Transform.ipynb  Quantum_Partition_Function.ipynb  Quantum_Phase_Estimation_Algorithm.ipynb  Quantum_Teleportation.ipynb  Quantum_Walk.ipynb  Rabi_Oscillations.ipynb  Random_Circuit.ipynb  Recursive_Quantum_Approximate_Optimization_Algorithm.ipynb  (+6 more)
(+211 files in other folders)
